@@ -39,7 +39,6 @@ The Initial Developer of the Covered Software is
   </licenses>
 
   <properties>
-    <group>system</group>
     <tcmaven.version>2.1.0</tcmaven.version>
     <terracotta.core.version>4.3.10-SNAPSHOT</terracotta.core.version>
     <tc.core.groupId>org.terracotta</tc.core.groupId>
@@ -75,8 +74,19 @@ The Initial Developer of the Covered Software is
     <surefire.max-memory>1g</surefire.max-memory>
     <surefire.additional-jvm-args/>
     <surefire.additional-jvm-module-args/>
-    <surefire.argLine>-server -Xms${surefire.min-memory} -Xmx${surefire.max-memory} ${surefire.additional-jvm-module-args} ${surefire.additional-jvm-args} -Dtc.base-dir=${tc.base-dir} ${tc.config} -Dtc.dso.globalmode=${tc.dso.globalmode} -Dtc.tests.info.property-files=${tc.tests.info.property-files} -Dcom.tc.properties=${tc.system.tests.properties} -Dcom.sun.management.jmxremote ${ee.license}</surefire.argLine>
-    <skipTests>true</skipTests>
+    <surefire.argLine>-server
+      -Xms${surefire.min-memory}
+      -Xmx${surefire.max-memory}
+      ${surefire.additional-jvm-module-args}
+      ${surefire.additional-jvm-args}
+      -Dtc.base-dir=${tc.base-dir} ${tc.config}
+      -Dtc.dso.globalmode=${tc.dso.globalmode}
+      -Dtc.tests.info.property-files=${tc.tests.info.property-files}
+      -Dcom.tc.properties=${tc.system.tests.properties}
+      -Dcom.sun.management.jmxremote
+      ${ee.license}
+      -Djdk.attach.allowAttachSelf
+    </surefire.argLine>
 
     <!--
         Unfortunately, this silly localMavenRepository property is necessary
@@ -84,6 +94,7 @@ The Initial Developer of the Covered Software is
         C:\DOCUME~1\${user.name}\.m2\repository to avoid spaces in the path
         (see the container-tests-windows profile definition).
     -->
+    <skipTests>true</skipTests> <!-- turned on if -Psystem-tests is passed -->
     <localMavenRepository>${user.home}/.m2/repository</localMavenRepository>
     <os-classifier>linux</os-classifier>
   </properties>
@@ -135,7 +146,7 @@ The Initial Developer of the Covered Software is
     <dependency>
       <groupId>org.terracotta.junit</groupId>
       <artifactId>test-listeners</artifactId>
-      <version>1.0.2</version>
+      <version>1.0.3</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
@@ -191,36 +202,33 @@ The Initial Developer of the Covered Software is
           <groupId>org.terracotta</groupId>
           <artifactId>maven-forge-plugin</artifactId>
           <version>${maven-forge-plugin.version}</version>
+          <!--
+            Only integration tests in this module.
+            This should be run with -Psystem-tests to pick up forge-parent profile
+            ITs must run after maven-appserver-plugin sets up in pre-integration-test
+          -->
+          <configuration>
+            <forkCount>1</forkCount>
+            <reuseForks>false</reuseForks>
+            <printSummary>true</printSummary>
+            <forkedProcessTimeoutInSeconds>${absolute-test-timeout-secs}</forkedProcessTimeoutInSeconds>
+            <useSystemClassLoader>true</useSystemClassLoader>
+            <workingDirectory>${project.build.directory}</workingDirectory>
+            <argLine>${surefire.argLine}</argLine>
+            <excludes>
+              <exclude>**/Abstract*.java</exclude>
+            </excludes>
+            <properties>
+              <property>
+                <name>listener</name>
+                <value>net.sf.ehcache.SystemExitListener</value>
+              </property>
+            </properties>
+          </configuration>
           <executions>
             <execution>
-              <id>default-test</id>
-              <phase>integration-test</phase>
-              <goals>
-                <goal>test</goal>
-              </goals>
-              <configuration>
-                <skipTests>${skipTests}</skipTests>
-                <forkCount>1</forkCount>
-                <reuseForks>false</reuseForks>
-                <printSummary>true</printSummary>
-                <forkedProcessTimeoutInSeconds>${absolute-test-timeout-secs}</forkedProcessTimeoutInSeconds>
-                <useSystemClassLoader>true</useSystemClassLoader>
-                <workingDirectory>${project.build.directory}</workingDirectory>
-                <argLine>${surefire.argLine}</argLine>
-                <excludes>
-                  <exclude>**/Abstract*.java</exclude>
-                </excludes>
-                <properties>
-                  <property>
-                    <name>listener</name>
-                    <value>net.sf.ehcache.SystemExitListener</value>
-                  </property>
-                </properties>
-              </configuration>
-            </execution>
-            <execution>
               <id>setl2classpath</id>
-              <phase>process-test-resources</phase>
+              <phase>generate-test-resources</phase>
               <goals>
                 <goal>setl2classpath</goal>
               </goals>
@@ -340,10 +348,6 @@ The Initial Developer of the Covered Software is
     </pluginManagement>
     <plugins>
       <plugin>
-        <groupId>org.terracotta</groupId>
-        <artifactId>maven-forge-plugin</artifactId>
-      </plugin>
-      <plugin>
         <groupId>org.codehaus.gmaven</groupId>
         <artifactId>groovy-maven-plugin</artifactId>
       </plugin>
@@ -360,6 +364,74 @@ The Initial Developer of the Covered Software is
   </build>
 
   <profiles>
+    <profile>
+      <id>system-tests</id>
+      <properties>
+        <skipTests>false</skipTests>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.terracotta</groupId>
+            <artifactId>maven-forge-plugin</artifactId>
+            <configuration>
+              <forkCount>1</forkCount>
+              <reuseForks>false</reuseForks>
+              <printSummary>true</printSummary>
+              <forkedProcessTimeoutInSeconds>${absolute-test-timeout-secs}</forkedProcessTimeoutInSeconds>
+              <useSystemClassLoader>true</useSystemClassLoader>
+              <useManifestOnlyJar>true</useManifestOnlyJar>
+              <trimStackTrace>false</trimStackTrace>
+              <workingDirectory>${project.build.directory}</workingDirectory>
+              <argLine>${surefire.argLine}</argLine>
+              <includes>
+                <include>**/*Test.java</include>
+                <include>**/*IT.java</include>
+              </includes>
+              <excludes>
+                <exclude>**/Abstract*.java</exclude>
+                <exclude>**/*TestSetup.java</exclude>
+                <exclude>**/*TestBase.java</exclude>
+                <exclude>**/TCTestCase.java</exclude>
+                <exclude>**/*$*</exclude>
+              </excludes>
+              <properties>
+                <property>
+                  <name>listener</name>
+                  <value>net.sf.ehcache.SystemExitListener</value>
+                </property>
+              </properties>
+            </configuration>
+            <executions>
+              <execution>
+                <id>default-test</id>
+                <phase>none</phase>
+              </execution>
+              <execution>
+                <id>default-integration-test</id>
+                <goals>
+                  <goal>integration-test</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>default-verify</id>
+                <goals>
+                  <goal>verify</goal>
+                </goals>
+              </execution>
+              <execution>
+                <id>setl2classpath</id>
+                <phase>generate-test-resources</phase>
+                <goals>
+                  <goal>setl2classpath</goal>
+                </goals>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+
     <profile>
       <id>workaround-windows</id>
       <activation>
@@ -378,15 +450,11 @@ The Initial Developer of the Covered Software is
         <tc.core.artifactId>terracotta-ee</tc.core.artifactId>
         <tc.management.war.groupId>com.terracottatech</tc.management.war.groupId>
         <tc.management.war.artifactId>ent-management-tsa-war</tc.management.war.artifactId>
-        <skipTests>false</skipTests>
       </properties>
     </profile>
 
     <profile>
       <id>check-short</id>
-      <properties>
-        <should_skip_tests>false</should_skip_tests>
-      </properties>     
       <build>
         <plugins>
           <plugin>
@@ -412,7 +480,6 @@ The Initial Developer of the Covered Software is
       <!-- Not sure this is used anywhere anymore -->
       <id>single-server</id>
       <properties>
-        <should_skip_tests>false</should_skip_tests>
         <tc.tests.info.standalone>true</tc.tests.info.standalone>
         <tc.tests.info.tsa.port>9910</tc.tests.info.tsa.port>
       </properties>
@@ -556,9 +623,6 @@ The Initial Developer of the Covered Software is
 
     <profile>
       <id>run-test-group</id>
-      <properties>
-        <skipTests>false</skipTests>
-      </properties>
       <build>
         <plugins>
           <plugin>
@@ -592,63 +656,6 @@ The Initial Developer of the Covered Software is
       </properties>
     </profile>
 
-    <profile>
-      <id>check</id>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.gmaven</groupId>
-            <artifactId>groovy-maven-plugin</artifactId>
-            <version>${groovy-maven-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>decide-which-group-should-run-tests</id>
-                <phase>process-test-resources</phase>
-                <goals>
-                  <goal>execute</goal>
-                </goals>
-                <configuration>
-                  <source>
-                    def target = properties['target']
-                    if (target == null) fail("-Dtarget needs to be set for this profile")
-                    def targetSet = new HashSet(Arrays.asList(target.split(",")))
-                    def projectGroups = new HashSet()
-                    if (project.properties['group'] != null) {
-                      projectGroups.addAll(Arrays.asList(project.properties['group'].split(",")))
-                    }
-                    targetSet.retainAll(projectGroups)
-                    def shouldSkipTest = targetSet.size() == 0
-                    project.properties.should_skip_tests = String.valueOf(shouldSkipTest)
-                  </source>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>         
-        </plugins>          
-      </build>
-    </profile>    
-
-    <profile>
-      <id>system-tests</id>
-      <properties>
-        <skipTests>false</skipTests>
-      </properties>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.terracotta</groupId>
-            <artifactId>maven-forge-plugin</artifactId>
-            <configuration>
-              <printSummary>true</printSummary>
-              <reportFormat>plain</reportFormat>
-              <excludes>
-                <exclude>**/Abstract*.java</exclude>
-              </excludes>
-            </configuration>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>    
   </profiles>
 
 </project>
